--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,11 +1,20 @@
- {% extends 'learning_logs/base.html' %}
+ {% extends 'learning_logs/base.html' %} 
+   <!-- 1 -->
+  {% load django_bootstrap5 %}
+   <!-- 2 -->
+  {% block page_header %}
+  <h2>Log in to your account.</h2>
+ {% endblock page_header %}
  {% block content %}
  {% if form.errors %}
   <p>Your username and password didn't match. Please try again.</p>
   {% endif %}
    <form action="{% url 'accounts:login' %}" method='post'>
     {% csrf_token %}
-     {{ form.as_div }}
+     <!-- 3 -->
+    {% bootstrap_form form %}
+     <!-- 4 -->
+    {% bootstrap_button button_type="submit" content="Log in" %}
      <button name="submit">Log in</button>
   </form>
  {% endblock content %}
